--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "packages/*"
   ],
   "engines": {
-    "yarn": ">= 1.19.1",
+    "yarn": ">= 1.19.1 <2",
     "node": ">= 17.3.0"
   },
   "scripts": {
